--- a/debian/control
+++ b/debian/control
@@ -14,7 +14,7 @@ Vcs-Browser: http://sodium.roch.website/git/pako/yoctolib_cpp.git/
 Package: libyocto-dev
 Section: non-free/libdevel
 Architecture: any
-Depends: ${misc:Depends}
+Depends: ${misc:Depends}, libyocto1.0.1, libyapi-dev
 Description: librairy to access to USB Yoctopuce devices, developer files
  Yoctopuce designs, manufactures and sells USB devices for automatic system 
  builders.
@@ -23,7 +23,7 @@ Description: librairy to access to USB Yoctopuce devices, developer files
 
 Package: libyocto1.0.1
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}
+Depends: ${shlibs:Depends}, ${misc:Depends}, libyapi1.0.1
 Description: librairy to access to USB Yoctopuce devices
  Yoctopuce designs, manufactures and sells USB devices for automatic system 
  builders.
@@ -33,7 +33,7 @@ Description: librairy to access to USB Yoctopuce devices
 Package: libyapi-dev
 Section: non-free/libdevel
 Architecture: any
-Depends: ${misc:Depends}
+Depends: ${misc:Depends}, libyapi1.0.1
 Description: basic API to access to USB Yoctopuce devices, developer files
  Yoctopuce designs, manufactures and sells USB devices for automatic system 
  builders.
