Update documentation and adaptation of package structure
 * Update makefile in Examples
 * Extract symlink from debian/rule to debian/*.links
 * Add excluded section in debian/copyright (upstream binary compiled)
     Activated for next upstream release

--- a/debian/rules
+++ b/debian/rules
@@ -15,13 +15,17 @@
 
 
 %:
-	dh $@ --sourcedirectory=Binaries/
+	dh $@ #--sourcedirectory=Binaries/
 
 
-override_dh_link:
-	ln -s /usr/lib/${DEB_HOST_MULTIARCH}/libyocto.so.1.0.1 debian/libyocto-dev/usr/lib/${DEB_HOST_MULTIARCH}/libyocto.so
-	ln -s /usr/lib/${DEB_HOST_MULTIARCH}/libyapi.so.1.0.1 debian/libyapi-dev/usr/lib/${DEB_HOST_MULTIARCH}/libyapi.so
-	dh_link
+#override_dh_auto_build:
+#	dh_auto_build
+
+#override_dh_link:
+#	ln -s /usr/lib/${DEB_HOST_MULTIARCH}/libyocto.so.1.0.1 debian/libyocto-dev/usr/lib/${DEB_HOST_MULTIARCH}/libyocto.so
+#	ln -s /usr/lib/${DEB_HOST_MULTIARCH}/libyapi.so.1.0.1 debian/libyapi-dev/usr/lib/${DEB_HOST_MULTIARCH}/libyapi.so
+#	dh_link
+
 override_dh_auto_clean:
 	rm -fr Binaries/linux/
 	dh_auto_clean
